Quick fix for left side cutoff issue.

--- a/src/TreeInterface/TreeGUI.css
+++ b/src/TreeInterface/TreeGUI.css
@@ -1,11 +1,13 @@
 .treegui-container {
   background-color: #ffffff;
+  display: flex;
+  justify-content: safe space-around;
 }
 
 .node-container {
   padding-top: 40px;
   padding-left: 10px;
-  padding-right: 5px;
+  padding-right: 10px;
 }
 
 .node-row {
